--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ footer .credit span {
 
 /* about */
 .container-about {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(img/2.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(2.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
